<resources>
    <string name="app_name">EazyTopup</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_eazytopup">Welcome to EazyTopup</string>
    <string name="welcome_message">Recharge across all platforms instantly.</string>
    <string name="get_started">Get started</string>
    <string name="home_text_lable">What do you want to do?</string>
    <string name="buy_airtime_for_self">Buy Airtime for Self</string>
    <string name="buy_airtime_for_other_network">Buy Airtime for Others</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="help">help</string>
    <string name="rate_us">Rate Us</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="points">Points</string>
    <string name="history">History</string>
    <string name="enter_phone_number">Phone Number</string>
    <string name="enter_amount">Amount</string>
    <string name="ksh">Ksh</string>
    <string name="buy_airtime">Buy Airtime</string>
    <string name="buy">Buy</string>
    <string name="code">+254</string>
    <string name="enter_your_phone_number">Your phone number</string>
    <string name="phone_number_to_top_up">Phone number </string>
    <string name="buy_aritime_from">Your Mpesa number e.g. 07xxxxxxxx </string>
    <string name="buy_airtime_for">Number to top up e.g. 07xxxxxxxx </string>
    <string name="name">Jane Doe</string>
    <string name="number">0712345678</string>
    <string name="date">04 Feb 01:29</string>
    <string name="amount">KSH 30.00</string>
    <string name="search">Search…</string>
    <string name="zero">0</string>
    <string name="total_airtime_purchased">Total Airtime purchased</string>
    <string name="week_airtime">Week spend</string>
    <string name="today_aitime">Today Spend</string>
    <string name="total_points">Total Points</string>
    <string name="my_points">Total Points</string>
    <string name="redeem_bonga_points">"Redeem points "</string>
    <string name="redeem_points_amount"> 10</string>
    <string name="redeem_airtime_amount"> 20 </string>
    <string name="transaction_statements">TRANSACTION STATEMENTS</string>
    <string name="monthly_spend">MONTHLY SPEND</string>
    <string name="average_spend">AVERAGE SPEND</string>
    <string name="amount_limit">Should not be less than Kshs 10</string>
    <string name="Data" />
</resources>