<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.BuyDataFragment">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_16dp"
        android:orientation="vertical"
        android:background="@android:color/transparent"
        android:padding="@dimen/margin_16dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_number_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_64dp"
            android:hint="@string/enter_your_phone_number"
            app:endIconDrawable="@drawable/ic_baseline_person_outline_24"
            app:endIconMode="custom"
            app:endIconTint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="@color/white"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/my_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:inputType="number"
                android:maxLength="10"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/buy_airtime_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/margin_4dp"
            android:gravity="start"
            android:text="@string/buy_aritime_from"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            />


        <LinearLayout
            android:id="@+id/buy_for_others_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_number_topup_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_32dp"
                android:hint="@string/phone_number_to_top_up"
                app:endIconDrawable="@drawable/ic_baseline_search_24"
                app:endIconMode="custom"
                app:endIconTint="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxBackgroundColor="@color/white"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_number_to_topup"
                    android:layout_width="match_parent"
                    android:inputType="number"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:maxLength="10"
                    android:imeOptions="actionSearch"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/margin_4dp"
                android:gravity="start"
                android:text="@string/buy_airtime_for"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/amount_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amount_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_32dp"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@android:color/holo_red_dark"
                app:prefixText="@string/ksh"
                app:prefixTextColor="@color/black"
                android:hint="@string/enter_amount"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:expandedHintEnabled="true"
                app:boxBackgroundColor="@color/white">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:inputType="number"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4dp"
                android:text="@string/amount_limit"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                />
        </LinearLayout>



        <Button
            android:id="@+id/btn_buy_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_48dp"
            android:background="@drawable/rounded_button"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:text="@string/buy"
            android:padding="@dimen/margin_16dp"
            android:textAllCaps="false"
            />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/paginationProgressBar"
        style="?attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:background="@android:color/transparent"
        android:layout_gravity="center"
        />


</FrameLayout>