<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:padding="@dimen/margin_4dp"
        android:layout_toEndOf="@id/acc_image"
        android:layout_marginStart="@dimen/margin_32dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentTop="true"
            android:padding="@dimen/margin_4dp"
            android:layout_toEndOf="@id/acc_image"

            >

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:gravity="top"
                android:text="@string/ksh"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/redeem_airtime_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4dp"
                android:layout_marginStart="@dimen/margin_16dp"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:layout_gravity="bottom"
                tools:text="@string/redeem_airtime_amount"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentTop="true"
            android:padding="@dimen/margin_4dp"
            android:layout_toEndOf="@id/acc_image"

            >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/redeem_points_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:text="@string/redeem_points_amount"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4dp"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_gravity="bottom"
                tools:text="@string/points"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"/>


</FrameLayout>