<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AirtimeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/margin_32dp"
        android:layout_marginEnd="@dimen/margin_32dp"
        android:orientation="vertical"
        android:weightSum="1"
        android:background="@android:color/transparent"
        >

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:layout_marginBottom="@dimen/margin_32dp"
            android:layout_gravity="center_horizontal"
            android:gravity="bottom"
            android:text="@string/home_text_lable"
            android:textStyle="bold"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            />

        <Button
            android:id="@+id/btnBuySelfAirtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_64dp"
            android:background="@drawable/rounded_button"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:text="@string/buy_airtime_for_self"
            android:padding="@dimen/margin_16dp"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/btnBuyOthersAirtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_48dp"
            android:background="@drawable/rounded_button"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:text="@string/buy_airtime_for_other_network"
            android:padding="@dimen/margin_16dp"
            android:textAllCaps="false"
            />

    </LinearLayout>


</FrameLayout>